--- a/index.html
+++ b/index.html
@@ -106,11 +106,31 @@
       <section class="subscribe">
         <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
         <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/"></form>
+        <form action="https://echo.htmlacademy.ru/"  method="post">
+
+          <input type="text" name="mail" id="mail-field" placeholder="Ваш e-mail">
+          <button class="subscribe-button" type="submit">Подписаться</button>
+        </form>
       </section>
     </main>
     <footer class="page-footer">
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <span class="visually-hidden">Вконтакте</span>
+          <a href="#"><img src="#" alt="ВКонтакте"></a>
+        </li>
+        <li class="footer-social-item">
+          <span class="visually-hidden">Telegram</span>
+          <a href="#"><img src="#" alt="Telegram"></a>
+        </li>
+        <li class="footer-social-item">
+          <span class="visually-hidden">YouTube</span>
+          <a href="#"><img src="#" alt="YouTube"></a>
+        </li>
+      </ul>
+      <a href="tel:+7622620563">+7 (812) 812-12-12</a>
+      <a href="https://htmlacademy.ru/"><img src="#" alt="HTML Academy"></a>
+     </footer>
 
-    </footer>
   </body>
 </html>
