1.Изменен alt логотипа.2.Добавлена страница каталога.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-           <img src="#" alt="Логотип сайта о Седоне.">
+           <img src="#" alt="Логотип города Седона.">
            </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -18,9 +18,8 @@
             <a class="navigation-link" href="about.html" >О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html" >Гостиница</a>
+            <a class="navigation-link" href="catalog.html" >Гостиницы</a>
           </li>
-        </ul>
       </ul>
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
@@ -38,14 +37,14 @@
           </a>
         </li>
         <li class="navigation-item">
-          <a class="navigation-link" href="#">ХОЧУ СЮДА!</a>
+          <button class="button-link" type="button">Хочу сюда!</button>
         </li>
       </ul>
       </nav>
     </header>
     <main class="main-index">
       <section class="hero">
-        <h1 class="visually-hidden">Welcome  to the gorgeous Sedona»</h1>
+        <h1 class="visually-hidden">Welcome  to the gorgeous Sedona,»</h1>
         <img src="#" alt="Welcome  to the gorgeous Sedona">
         <p class="hero-description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="hero-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
@@ -76,6 +75,7 @@
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img src="#" alt="Домики на фоне скал в городе Седона">
           </li>
+          </ul>
       </section>
       <section class="service">
         <h2 class="servise-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
