Добавляет графику ко всем страницам

--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-           <img src="#" alt="Логотип города Седона.">
+           <img src="img/logo-Sedona.svg" width="140" height="70.05" alt="Логотип города Седона.">
            </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -28,10 +28,12 @@
             <span class="visually-hidden">
               Поиск
             </span>
+            <img src="img/search.png" width="22" height="22">
           </a>
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <img src="img/heart.png" width="22" height="22">
             <span class="visually-hidden">
               Избранное
             </span>
@@ -134,68 +136,54 @@
         <ul class="hotels-card-list">
           <li class="hotels-card-item">
              <a href="#">
-               <img src="#" alt="">
+               <img src="img/Amara Resort & Spa.jpg" width="300" height="212" alt="">
                <h3 class="card-item-title">Amara Resort & Spa</h3>
              </a>
                <span class="hotels-card-type">Гостиница</span>
                <span class="hotels-card-price"><b>От 4000 ₽</b></span>
                <a class="hotels-card-button button" href="#">Подробнее</a>
                <button class="button-hotels-card" type="button">Избранное</button>
-               <div class="rating-stars">
-                <img src="#" alt="star">
-                <img src="#" alt="star">
-                <img src="#" alt="star">
-                <img src="#" alt="star">
-              </div>
-              <span class="hotels-rating">Рейтинг: 8,5</span>
+               <span class="stars"></span>
+               <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
+               <p class="rate">Рейтинг: 8,5</p>
           </li>
           <li class="hotels-card-item">
             <a href="#">
-              <img src="#" alt="">
+              <img src="img/Villas at Poco Diablo.jpg" width="300" height="212" alt="">
               <h3 class="card-item-title">Villas at Poco Diablo</h3>
             </a>
               <span class="hotels-card-type">Гостиница</span>
               <span class="hotels-card-price"><b>От 5000 ₽</b></span>
               <a class="hotels-card-button button" href="#">Подробнее</a>
               <button class="button-hotels-card" type="button">Избранное</button>
-              <div class="rating-stars">
-               <img src="#" alt="star">
-               <img src="#" alt="star">
-               <img src="#" alt="star">
-               <img src="#" alt="star">
-             </div>
-             <span class="hotels-rating">Рейтинг: 9,2</span>
-         </li>
+              <span class="stars"></span>
+              <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
+              <p class="rate">Рейтинг: 9,2</p>
          <li class="hotels-card-item">
           <a href="#">
-            <img src="#" alt="">
+            <img src="img/Desert Quail Inn.jpg" width="300" height="212" alt="">
             <h3 class="card-item-title">Desert Quail Inn</h3>
           </a>
             <span class="hotels-card-type">Гостиница</span>
             <span class="hotels-card-price"><b>От 2500 ₽</b></span>
             <a class="hotels-card-button button" href="#">Подробнее</a>
             <button class="button-hotels-card" type="button">Избранное</button>
-            <div class="rating-stars">
-             <img src="#" alt="star">
-             <img src="#" alt="star">
-             <img src="#" alt="star">
-           </div>
-           <span class="hotels-rating">Рейтинг: 6,9</span>
+            <span class="stars"></span>
+            <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5.</span></p>
+            <p class="rate">Рейтинг: 6,9</p>
        </li>
        <li class="hotels-card-item">
         <a href="#">
-          <img src="#" alt="">
+          <img src="img/GreenTree Inn.jpg" width="300" height="212" alt="">
           <h3 class="card-item-title">GreenTree Inn</h3>
         </a>
           <span class="hotels-card-type">Гостиница</span>
           <span class="hotels-card-price"><b>От 1500 ₽</b></span>
           <a class="hotels-card-button button" href="#">Подробнее</a>
           <button class="button-hotels-card" type="button">Избранное</button>
-          <div class="rating-stars">
-           <img src="#" alt="star">
-           <img src="#" alt="star">
-         </div>
-         <span class="hotels-rating">Рейтинг: 5,0</span>
+          <span class="stars"></span>
+          <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5.</span></p>
+          <p class="rate">Рейтинг: 5,0</p>
      </li>
         </ul>
         <ul class="pagination">
@@ -230,19 +218,19 @@
       <ul class="footer-social-list">
         <li class="footer-social-item">
           <span class="visually-hidden">Вконтакте</span>
-          <a href="#"><img src="#" alt="ВКонтакте"></a>
+          <a href="#"><img src="img/VK.svg" width="24" height="14" alt="ВКонтакте"></a>
         </li>
         <li class="footer-social-item">
           <span class="visually-hidden">Telegram</span>
-          <a href="#"><img src="#" alt="Telegram"></a>
+          <a href="#"><img src="img/telegram.svg" width="18" height="15.1"  alt="Telegram"></a>
         </li>
         <li class="footer-social-item">
           <span class="visually-hidden">YouTube</span>
-          <a href="#"><img src="#" alt="YouTube"></a>
+          <a href="#"><img src="img/youtube.svg" width="22" height="17" alt="YouTube"></a>
         </li>
       </ul>
       <a href="tel:+7622620563">+7 (812) 812-12-12</a>
-      <a href="https://htmlacademy.ru/"><img src="#" alt="HTML Academy"></a>
+      <a href="https://htmlacademy.ru/"><img src="img/HTML Academy.png" width="114.9" height="32.9" alt="HTML Academy"></a>
      </footer>
 
   </body>
