--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="page-header">
       <nav class="navigation">
         <a class="navigation-logo" href="index.html">
-           <img src="#" alt="Логотип города Седона.">
+           <img src="img/logo-Sedona.svg" width="140" height="70.05" alt="Логотип города Седона.">
            </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -24,6 +24,7 @@
       <ul class="navigation-list navigation-user">
         <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <img src="img/search.png" width="22"  height="22">
             <span class="visually-hidden">
               Поиск
             </span>
@@ -31,6 +32,7 @@
         </li>
         <li class="navigation-item">
           <a class="navigation-link" href="#">
+            <img src="img/heart.png" width="22" height="22">
             <span class="visually-hidden">
               Избранное
             </span>
@@ -44,8 +46,9 @@
     </header>
     <main class="main-index">
       <section class="hero">
+
         <h1 class="visually-hidden">Welcome  to the gorgeous Sedona,»</h1>
-        <img src="#" alt="Welcome  to the gorgeous Sedona">
+        <img src="img/welcome.svg" width="458"  height="352" alt="Welcome  to the gorgeous Sedona">
         <p class="hero-description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="hero-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
@@ -55,7 +58,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="#" alt="Домики на фоне скал в городе Седона">
+            <img src="img/house and rock.jpg" width="800" height="385" alt="Домики на фоне скал в городе Седона">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -73,7 +76,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="#" alt="Домики на фоне скал в городе Седона">
+            <img src="img/the devil's bridge.jpg" width="800" height="385" alt="Мост дьявола">
           </li>
           </ul>
       </section>
@@ -82,17 +85,17 @@
         <p class="servise-description">Опытный персонал и качественное обслуживание!</p>
         <ul class="servise-list-card">
           <li class="service-item-card">
-            <img src="#" alt="Иконка-домик">
+            <img src="img/hause.svg" width="75" height="72" alt="Иконка-домик">
             <h2 class="servise-list-card-title">жилье</h2>
             <p class="ervise-list-card-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="service-item-card">
-            <img src="#" alt="Иконка-гамбургер">
+            <img src="img/food.svg" width="74" height="70" alt="Иконка-гамбургер">
             <h2 class="servise-list-card-title">еда</h2>
             <p class="ervise-list-card-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="service-item-card">
-            <img src="#" alt="Иконка-сувенир">
+            <img src="img/souvenir.svg" width="64" height="76" alt="Иконка-сувенир">
             <h2 class="servise-list-card-title">сувениры</h2>
             <p class="ervise-list-card-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
@@ -117,19 +120,19 @@
       <ul class="footer-social-list">
         <li class="footer-social-item">
           <span class="visually-hidden">Вконтакте</span>
-          <a href="#"><img src="#" alt="ВКонтакте"></a>
+          <a href="#"><img src="img/VK.svg" width="24" height="14" alt="ВКонтакте"></a>
         </li>
         <li class="footer-social-item">
           <span class="visually-hidden">Telegram</span>
-          <a href="#"><img src="#" alt="Telegram"></a>
+          <a href="#"><img src="img/telegram.svg" width="18" height="15.1" alt="Telegram"></a>
         </li>
         <li class="footer-social-item">
           <span class="visually-hidden">YouTube</span>
-          <a href="#"><img src="#" alt="YouTube"></a>
+          <a href="#"><img src="img/youtube.svg" width="22" height="17" alt="YouTube"></a>
         </li>
       </ul>
       <a href="tel:+7622620563">+7 (812) 812-12-12</a>
-      <a href="https://htmlacademy.ru/"><img src="#" alt="HTML Academy"></a>
+      <a href="https://htmlacademy.ru/"><img src="img/HTML Academy.png" width="114.9" height="32.9" alt="HTML Academy"></a>
      </footer>
 
   </body>
