--- a/catalog.html
+++ b/catalog.html
@@ -6,47 +6,42 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+    <div class="container">
     <header class="page-header">
+      <a class="logo" href="index.html">
+        <img class="img" src="img/logo-Sedona.svg" width="140" height="70.05" alt="Логотип города Седона.">
+      </a>
       <nav class="navigation">
-        <a class="navigation-logo" href="index.html">
-           <img src="img/logo-Sedona.svg" width="140" height="70.05" alt="Логотип города Седона.">
-           </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html" >Главная</a>
+            <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="about.html" >О Седоне</a>
+            <a class="navigation-link" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html" >Гостиница</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
-
-      </ul>
-      <ul class="navigation-list navigation-user">
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">
-              Поиск
-            </span>
-            <img src="img/search.png" width="22" height="22">
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <img src="img/heart.png" width="22" height="22">
-            <span class="visually-hidden">
-              Избранное
-            </span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <button class="button-link" type="button">Хочу сюда!</button>
-        </li>
-      </ul>
+        </ul>
       </nav>
-    </header>
+      <div class="extra">
+        <ul class="extra-icons">
+          <li class="extra-icons-item">
+            <a class="icon-link" href="#" title="Поиск">
+              <img class="img" src="img/search.png" width="22" height="22">
 
+            </a>
+          </li>
+          <li class="extra-icons-item">
+            <a class="icon-link" href="#" title="Избранное">
+              <img class="img" src="img/heart.png" width="22" height="22">
+
+            </a>
+          </li>
+        </ul>
+        <button class="button-link" type="button">Хочу сюда!</button>
+      </div>
+    </header>
     <main class="main-inner">
       <header class="inner-header">
         <h1 class="inner-header-title">Гостиницы Седоны</h1>
@@ -137,7 +132,7 @@
         <ul class="hotels-card-list">
           <li class="hotels-card-item">
              <a href="#">
-               <img src="img/Amara Resort & Spa.jpg" width="300" height="212" alt="">
+               <img src="img/hotels/Amara_Resort_&_Spa.jpg"300" height="212" alt="">
                <h3 class="card-item-title">Amara Resort & Spa</h3>
              </a>
                <span class="hotels-card-type">Гостиница</span>
@@ -150,7 +145,7 @@
           </li>
           <li class="hotels-card-item">
             <a href="#">
-              <img src="img/Villas at Poco Diablo.jpg" width="300" height="212" alt="">
+              <img src="img/hotels/Villas_at Poco_Diablo.jpg" width="300" height="212" alt="">
               <h3 class="card-item-title">Villas at Poco Diablo</h3>
             </a>
               <span class="hotels-card-type">Гостиница</span>
@@ -160,12 +155,12 @@
               <span class="stars"></span>
               <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
               <p class="rate">Рейтинг: 9,2</p>
-         <li class="hotels-card-item">
-          <a href="#">
-            <img src="img/Desert Quail Inn.jpg" width="300" height="212" alt="">
-            <h3 class="card-item-title">Desert Quail Inn</h3>
-          </a>
-            <span class="hotels-card-type">Гостиница</span>
+              <li class="hotels-card-item">
+                <a href="#">
+                  <img src="img/hotels/Desert_Quail_Inn.jpg" width="300" height="212" alt="">
+                  <h3 class="card-item-title">Desert Quail Inn</h3>
+                </a>
+                <span class="hotels-card-type">Гостиница</span>
             <span class="hotels-card-price"><b>От 2500 ₽</b></span>
             <a class="hotels-card-button button" href="#">Подробнее</a>
             <button class="button-hotels-card" type="button">Избранное</button>
@@ -175,7 +170,7 @@
        </li>
        <li class="hotels-card-item">
         <a href="#">
-          <img src="img/GreenTree Inn.jpg" width="300" height="212" alt="">
+          <img src="img/hotels/Green_Tree_Inn.jpg" width="300" height="212" alt="">
           <h3 class="card-item-title">GreenTree Inn</h3>
         </a>
           <span class="hotels-card-type">Гостиница</span>
@@ -231,8 +226,8 @@
         </li>
       </ul>
       <a href="tel:+7622620563">+7 (812) 812-12-12</a>
-      <a href="https://htmlacademy.ru/"><img src="img/HTML Academy.png" width="114.9" height="32.9" alt="HTML Academy"></a>
+      <a href="https://htmlacademy.ru/"><img src="img/HTML_Academy.png" width="114.9" height="32.9" alt="HTML Academy"></a>
      </footer>
-
+    </div>
   </body>
 </html>
