--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/styles.css">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
+
     <div class="container">
+
       <header class="page-header">
         <a class="logo" href="index.html">
           <img class="img" src="img/logo-Sedona.svg" width="140" height="70" alt="Логотип города Седона.">
@@ -29,31 +33,33 @@
             <li class="extra-icons-item">
               <a class="icon-link" href="#" title="Поиск">
                 <img class="img" src="img/search.png" width="22" height="22" alt="Поиск">
-
               </a>
             </li>
             <li class="extra-icons-item">
               <a class="icon-link" href="#" title="Избранное">
                 <img class="img" src="img/heart.png" width="22" height="22" alt="Избранное">
-
               </a>
             </li>
           </ul>
           <button class="button-link" type="button">Хочу сюда!</button>
         </div>
       </header>
+
       <main class="main-index">
+
         <section class="hero">
           <h1 class="visually-hidden">Welcome to the gorgeous Sedona,»</h1>
-          <img class="img" src="img/welcome.svg" width="458" height="352" alt="Welcome  to the gorgeous Sedona">
-           <div class="hero-descript">
-           <p class="hero-description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-            <p class="hero-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-            </div>
+          <img class="img img-hero" src="img/welcome.svg" width="458" height="352"
+            alt="Welcome  to the gorgeous Sedona">
         </section>
+
+        <section class="descript">
+          <p class="description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        </section>
+
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
-
           <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-title">Настоящий городок</h3>
@@ -72,7 +78,6 @@
               <h3 class="advantages-title">Мало туристов</h3>
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-
             <li class="advantages-item">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -126,7 +131,7 @@
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">Telegram</span>
-            <a href="#"><img src="img/socials_svg/telegram.svg" width="18" height="15.1" alt="Telegram"></a>
+            <a href="#"><img src="img/socials_svg/telegram.svg" width="18" height="15" alt="Telegram"></a>
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">YouTube</span>
@@ -134,7 +139,7 @@
           </li>
         </ul>
         <a href="tel:+7622620563">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/"><img src="img/HTML_Academy.png" width="114.9" height="32.9"
+        <a href="https://htmlacademy.ru/"><img src="img/HTML_Academy.png" width="115" height="33"
             alt="HTML Academy"></a>
       </footer>
     </div>
