--- a/index.html
+++ b/index.html
@@ -60,12 +60,17 @@
 
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
-          <ul class="advantages-list">
-            <li class="advantages-item">
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <div class="advantages-photo-right">
+            <div class="advantages-item">
+              <h3 class="advantages-title-right">Настоящий городок</h3>
+              <p class="advantages-description-right">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
+            <div class="advantages-item-photo">
               <img src="img/house_and_rock.jpg" width="800" height="385" alt="Домики на фоне скал в городе Седона">
-            </li>
+            </div>
+          </div>
+
+          <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-title">Небольшая площадь</h3>
               <p class="advantages-description">Все достопримечательности находятся очень близко</p>
@@ -78,13 +83,19 @@
               <h3 class="advantages-title">Мало туристов</h3>
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-            <li class="advantages-item">
-              <h3 class="advantages-title">Там есть мост дьявола</h3>
-              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-              <img src="img/the_devil's_bridge.jpg" width="800" height="385" alt="Мост дьявола">
-            </li>
           </ul>
+
+          <div class="advantages-photo-left">
+            <div class="advantages-item">
+              <h3 class="advantages-title-left">Там есть мост дьявола</h3>
+              <p class="advantages-description-left">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </div>
+            <div class="advantages-item-photo">
+              <img src="img/the_devil's_bridge.jpg" width="800" height="385" alt="Мост дьявола">
+            </div>
+          </div>
         </section>
+
         <section class="service">
           <h2 class="servise-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
           <p class="servise-description">Опытный персонал и качественное обслуживание!</p>
@@ -92,56 +103,59 @@
             <li class="service-item-card">
               <img src="img/service-item-card_svg/hause.svg" width="75" height="72" alt="Иконка-домик">
               <h2 class="servise-list-card-title">жилье</h2>
-              <p class="ervise-list-card-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              <p class="servise-list-card-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="service-item-card">
               <img src="img/service-item-card_svg/food.svg" width="74" height="70" alt="Иконка-гамбургер">
               <h2 class="servise-list-card-title">еда</h2>
-              <p class="ervise-list-card-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+              <p class="servise-list-card-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
               </p>
             </li>
             <li class="service-item-card">
               <img src="img/service-item-card_svg/souvenir.svg" width="64" height="76" alt="Иконка-сувенир">
               <h2 class="servise-list-card-title">сувениры</h2>
-              <p class="ervise-list-card-description">Не только китайского, но и настоящего местного производства!</p>
+              <p class="servise-list-card-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
           </ul>
         </section>
+
         <section class="search">
           <h3 class="search-title">Заинтересовались?</h3>
           <p class="search-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц
             в Седоне</p>
-          <a class="search-catalog" href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+          <button class="search-catalog-button"  href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
         </section>
         <section class="subscribe">
           <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
           <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form action="https://echo.htmlacademy.ru/" method="post">
-
-            <input type="text" name="mail" id="mail-field" placeholder="Ваш e-mail">
+            <input  type="text" name="mail" id="mail-field" placeholder="Ваш e-mail">
             <button class="subscribe-button" type="submit">Подписаться</button>
           </form>
         </section>
+
       </main>
+
       <footer class="page-footer">
         <ul class="footer-social-list">
           <li class="footer-social-item">
             <span class="visually-hidden">Вконтакте</span>
-            <a href="#"><img src="img/socials_svg/VK.svg" width="24" height="14" alt="ВКонтакте"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/VK.svg" width="24" height="14" alt="ВКонтакте"></a>
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">Telegram</span>
-            <a href="#"><img src="img/socials_svg/telegram.svg" width="18" height="15" alt="Telegram"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/telegram.svg" width="18" height="15" alt="Telegram"></a>
           </li>
           <li class="footer-social-item">
             <span class="visually-hidden">YouTube</span>
-            <a href="#"><img src="img/socials_svg/youtube.svg" width="22" height="17" alt="YouTube"></a>
+            <a href="#"><img class="img img-social" src="img/socials_svg/youtube.svg" width="22" height="17" alt="YouTube"></a>
           </li>
         </ul>
-        <a href="tel:+7622620563">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/"><img src="img/HTML_Academy.png" width="115" height="33"
+        <a class="phone" href="tel:+7622620563">+7 (812) 812-12-12</a>
+        <a href="https://htmlacademy.ru/"><img class="img img-academy"  src="img/HTML_Academy.png" width="115" height="33"
             alt="HTML Academy"></a>
       </footer>
+
     </div>
   </body>
 
