Меняет section на div. Меняет кнопку на ссылку. Исправляет ошибки на  странице каталога.

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
     <div class="container">
       <header class="page-header">
         <a class="logo" href="index.html">
-          <img class="img" src="img/logo-Sedona.svg" width="140" height="70.05" alt="Логотип города Седона.">
+          <img class="img" src="img/logo-Sedona.svg" width="140" height="70" alt="Логотип города Седона.">
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -30,13 +30,13 @@
           <ul class="extra-icons">
             <li class="extra-icons-item">
               <a class="icon-link" href="#" title="Поиск">
-                <img class="img" src="img/search.png" width="22" height="22">
+                <img class="img" src="img/search.png" width="22" height="22" alt="Поиск">
 
               </a>
             </li>
             <li class="extra-icons-item">
               <a class="icon-link" href="#" title="Избранное">
-                <img class="img" src="img/heart.png" width="22" height="22">
+                <img class="img" src="img/heart.png" width="22" height="22" alt="Избранное">
 
               </a>
             </li>
@@ -144,12 +144,12 @@
               <a class="hotels-card-button button" href="#">Подробнее</a>
               <button class="button-hotels-card" type="button">Избранное</button>
               <span class="stars"></span>
-              <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
+              <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span>
               <p class="rate">Рейтинг: 8,5</p>
             </li>
             <li class="hotels-card-item">
               <a href="#">
-                <img src="img/hotels/Villas_at Poco_Diablo.jpg" width="300" height="212" alt="">
+                <img src="img/hotels/Villas_at_Poco_Diablo.jpg" width="300" height="212" alt="">
                 <h3 class="card-item-title">Villas at Poco Diablo</h3>
               </a>
               <span class="hotels-card-type">Гостиница</span>
@@ -157,7 +157,7 @@
               <a class="hotels-card-button button" href="#">Подробнее</a>
               <button class="button-hotels-card" type="button">Избранное</button>
               <span class="stars"></span>
-              <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span></p>
+              <span class="visually-hidden">Количество звезд гостиницы - 4 звезды из 5.</span>
               <p class="rate">Рейтинг: 9,2</p>
             <li class="hotels-card-item">
               <a href="#">
@@ -169,7 +169,7 @@
               <a class="hotels-card-button button" href="#">Подробнее</a>
               <button class="button-hotels-card" type="button">Избранное</button>
               <span class="stars"></span>
-              <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5.</span></p>
+              <span class="visually-hidden">Количество звезд гостиницы - 3 звезды из 5.</span>
               <p class="rate">Рейтинг: 6,9</p>
             </li>
             <li class="hotels-card-item">
@@ -182,12 +182,12 @@
               <a class="hotels-card-button button" href="#">Подробнее</a>
               <button class="button-hotels-card" type="button">Избранное</button>
               <span class="stars"></span>
-              <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5.</span></p>
+              <span class="visually-hidden">Количество звезд гостиницы - 2 звезды из 5.</span>
               <p class="rate">Рейтинг: 5,0</p>
             </li>
           </ul>
           <ul class="pagination">
-            </li>
+
             <li class="pagination-item">
               <a class="pagination-link pagination-current">1</a>
             </li>
