--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             alt="Welcome  to the gorgeous Sedona">
         </section>
 
-        <section class="descript">
+        <div class="descript">
           <p class="description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
           <p class="reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        </section>
+        </div>
 
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
@@ -123,7 +123,7 @@
           <h3 class="search-title">Заинтересовались?</h3>
           <p class="search-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц
             в Седоне</p>
-          <button class="search-catalog-button"  href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
+          <a class="search-catalog"  href="catalog.html">ПОИСК ГОСТИНИЦЫ В СЕДОНЕ</a>
         </section>
         <section class="subscribe">
           <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
