Добавляет сетки для главной страницы

--- a/index.html
+++ b/index.html
@@ -48,30 +48,31 @@
       <main class="main-index">
 
         <section class="hero">
-          <h1 class="visually-hidden">Welcome to the gorgeous Sedona,»</h1>
+          <h1 class="visually-hidden">Welcome to the gorgeous Sedona,because the Grand Canyon sucks!</h1>
           <img class="img img-hero" src="img/welcome.svg" width="458" height="352"
             alt="Welcome  to the gorgeous Sedona">
         </section>
 
-        <div class="descript">
+        <section class="descript">
+          <h2 class="visually-hidden">Описание</h2>
           <p class="description">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
           <p class="reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        </div>
+        </section>
 
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <div class="advantages-photo-right">
-            <div class="advantages-item">
+            <div class="advantages-item-right">
               <h3 class="advantages-title-right">Настоящий городок</h3>
               <p class="advantages-description-right">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             <div class="advantages-item-photo">
-              <img src="img/house_and_rock.jpg" width="800" height="385" alt="Домики на фоне скал в городе Седона">
+              <img src="img/house_and_rock.jpg" width="800" height="100%" alt="Домики на фоне скал в городе Седона">
             </div>
           </div>
 
           <ul class="advantages-list">
-            <li class="advantages-item">
+            <li class="advantages-list-item">
               <h3 class="advantages-title">Небольшая площадь</h3>
               <p class="advantages-description">Все достопримечательности находятся очень близко</p>
             </li>
@@ -85,15 +86,15 @@
             </li>
           </ul>
 
-          <div class="advantages-photo-left">
-            <div class="advantages-item">
+          <section class="advantages-photo-left">
+            <div class="advantages-item-left">
               <h3 class="advantages-title-left">Там есть мост дьявола</h3>
               <p class="advantages-description-left">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             <div class="advantages-item-photo">
-              <img src="img/the_devil's_bridge.jpg" width="800" height="385" alt="Мост дьявола">
+              <img src="img/the_devil's_bridge.jpg" width="800" height="100%" alt="Мост дьявола">
             </div>
-          </div>
+          </section>
         </section>
 
         <section class="service">
@@ -101,18 +102,18 @@
           <p class="servise-description">Опытный персонал и качественное обслуживание!</p>
           <ul class="servise-list-card">
             <li class="service-item-card">
-              <img src="img/service-item-card_svg/hause.svg" width="75" height="72" alt="Иконка-домик">
+              <img class="img img-service" src="img/service-item-card_svg/hause.svg" width="75" height="72" alt="Иконка-домик">
               <h2 class="servise-list-card-title">жилье</h2>
               <p class="servise-list-card-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
             <li class="service-item-card">
-              <img src="img/service-item-card_svg/food.svg" width="74" height="70" alt="Иконка-гамбургер">
+              <img class="img img-service" src="img/service-item-card_svg/food.svg" width="74" height="70" alt="Иконка-гамбургер">
               <h2 class="servise-list-card-title">еда</h2>
               <p class="servise-list-card-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
               </p>
             </li>
             <li class="service-item-card">
-              <img src="img/service-item-card_svg/souvenir.svg" width="64" height="76" alt="Иконка-сувенир">
+              <img class="img img-service" src="img/service-item-card_svg/souvenir.svg" width="64" height="76" alt="Иконка-сувенир">
               <h2 class="servise-list-card-title">сувениры</h2>
               <p class="servise-list-card-description">Не только китайского, но и настоящего местного производства!</p>
             </li>
