Добавляет сетки для каталога

--- a/catalog.html
+++ b/catalog.html
@@ -50,7 +50,10 @@
           <ul class="breadcrumbs">
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link" href="index.html"><img class="img breadcrumbs-link-icon" style="height: 12px; width: 12px;"
-                 src="img/catalog_breadcrum.svg" alt="На главную"></a>
+                 src="img/catalog-breadcrum/catalog_breadcrum.svg" alt="На главную"></a>
+            </li>
+            <li class="breadcrumbs-item">
+              <img style="width: 6px; height: 10px;" class="img" src="img/catalog-breadcrum/Vector.svg">
             </li>
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link">Гостиницы</a>
