--- a/index.html
+++ b/index.html
@@ -63,42 +63,50 @@
           <h2 class="visually-hidden">Преимущества</h2>
           <div class="advantages-first">
             <div class="advantages-item-first">
+              <div class="advantages-item-conteiner">
               <h3 class="advantages-title-first">Настоящий городок</h3>
               <hr class="advantages-title-divider" />
               <p class="advantages-description-first">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
-            <div class="advantages-item-photo">
-              <img class="img" src="img/house_and_rock.jpg" width="800" height="385" alt="Домики на фоне скал в городе Седона">
+            </div>
+            <div class="advantages-item-photo-first">
+
             </div>
           </div>
 
           <ul class="advantages-list">
             <li class="advantages-list-item">
+              <div class="advantages-item-conteiner">
               <h3 class="advantages-title">Небольшая площадь</h3>
               <hr class="advantages-title-divider" />
               <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+              </div>
             </li>
             <li class="advantages-list-item">
+              <div class="advantages-item-conteiner">
               <h3 class="advantages-title">Красивая дорога</h3>
               <hr class="advantages-title-divider" />
               <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              </div>
             </li>
             <li class="advantages-list-item">
+              <div class="advantages-item-conteiner">
               <h3 class="advantages-title">Мало туристов</h3>
               <hr class="advantages-title-divider" />
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+              </div>
             </li>
           </ul>
 
           <section class="advantages-last">
             <div class="advantages-item-last">
+              <div class="advantages-item-conteiner">
               <h3 class="advantages-title-last">Там есть мост дьявола</h3>
               <hr class="advantages-title-divider" />
               <p class="advantages-description-last">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
-            <div class="advantages-item-photo">
-              <img class="img
-              " src="img/the_devil's_bridge.jpg" width="800" height="385" alt="Мост дьявола">
+            </div>
+            <div class="advantages-item-photo-last">
             </div>
           </section>
         </section>
@@ -159,7 +167,7 @@
           </li>
         </ul>
         <a class="phone" href="tel:+7622620563">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/"><img class="img img-academy"  src="img/HTML_Academy.png" width="115" height="33"
+        <a class="academy" href="https://htmlacademy.ru/"><img class="img img-academy"  src="img/HTML_Academy.png" width="115" height="33"
             alt="HTML Academy"></a>
       </footer>
 
