--- a/7/catalog.html
+++ b/7/catalog.html
@@ -236,7 +236,7 @@
           </li>
         </ul>
         <a class="phone" href="tel:+7622620563">+7 (812) 812-12-12</a>
-        <a href="https://htmlacademy.ru/"><img class="img img-academy" src="img/HTML_Academy.png" width="115"
+        <a class="academy" href="https://htmlacademy.ru/"><img class="img img-academy" src="img/HTML_Academy.png" width="115"
             height="33" alt="HTML Academy"></a>
       </footer>
     </div>
