--- a/catalog.html
+++ b/catalog.html
@@ -215,6 +215,15 @@
           </ul>
         </section>
 
+        <section class="subscribe-catalog">
+          <h3 class="subscribe-title-catalog">Подпишитесь на рассылку</h3>
+          <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+            <input class="subscribe-input" type="text" name="mail" id="mail-field" placeholder="Ваш e-mail">
+            <button class="subscribe-button" type="submit">Подписаться</button>
+          </form>
+        </section>
+
       </main>
       <footer class="page-footer">
         <ul class="footer-social-list">
