--- a/index.html
+++ b/index.html
@@ -33,11 +33,14 @@
             <li class="extra-icons-item">
               <a class="icon-link" href="#" title="Поиск">
                 <img class="img" src="img/search.png" width="22" height="22" alt="Поиск">
+                <span class="visually-hidden">Поиск</span>
               </a>
             </li>
             <li class="extra-icons-item">
               <a class="icon-link" href="#" title="Избранное">
                 <img class="img" src="img/heart.png" width="22" height="22" alt="Избранное">
+
+                <span class="visually-hidden">Избранное</span>
               </a>
             </li>
           </ul>
@@ -69,7 +72,7 @@
               <p class="advantages-description-first">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             </div>
             </div>
-            <div class="advantages-item-photo-first">
+            <div class="advantages-photo-first">
 
             </div>
           </div>
@@ -106,7 +109,7 @@
               <p class="advantages-description-last">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </div>
             </div>
-            <div class="advantages-item-photo-last">
+            <div class="advantages-photo-last">
             </div>
           </section>
         </section>
@@ -114,22 +117,28 @@
         <section class="service">
           <h2 class="servise-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
           <p class="servise-description">Опытный персонал и качественное обслуживание!</p>
-          <ul class="servise-list-card">
-            <li class="service-item-card">
+          <ul class="servise-list">
+            <li class="service-item">
+              <div class="service-item-container">
               <img class="img img-service" src="img/service-item-card_svg/hause.svg" width="75" height="72" alt="Иконка-домик">
-              <h2 class="servise-list-card-title">жилье</h2>
-              <p class="servise-list-card-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              <h2 class="servise-list-title">жилье</h2>
+              <p class="servise-list-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              </div>
             </li>
-            <li class="service-item-card">
+            <li class="service-item">
+              <div class="service-item-container">
               <img class="img img-service" src="img/service-item-card_svg/food.svg" width="74" height="70" alt="Иконка-гамбургер">
-              <h2 class="servise-list-card-title">еда</h2>
-              <p class="servise-list-card-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
+              <h2 class="servise-list-title">еда</h2>
+              <p class="servise-list-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!
               </p>
+              </div>
             </li>
-            <li class="service-item-card">
+            <li class="service-item">
+              <div class="service-item-container">
               <img class="img img-service" src="img/service-item-card_svg/souvenir.svg" width="64" height="76" alt="Иконка-сувенир">
-              <h2 class="servise-list-card-title">сувениры</h2>
-              <p class="servise-list-card-description">Не только китайского, но и настоящего местного производства!</p>
+              <h2 class="servise-list-title">сувениры</h2>
+              <p class="servise-list-description">Не только китайского, но и настоящего местного производства!</p>
+              </div>
             </li>
           </ul>
         </section>
